# awx-mcp

./: .dockerignore  .env.example  CHANGELOG.md  CODE_OF_CONDUCT.ja.md  CODE_OF_CONDUCT.ko.md  Dockerfile  README.ja.md  README.ko.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  dco.yml  lint.yml
awx_mcp/: __init__.py  access_log.py  client.py  proxy.py  server.py  tls_config.py  usage.py  utils.py
awx_mcp/tools/: ad_hoc.py  credentials.py  execution_environments.py  groups.py  hosts.py  instances.py  inventories.py  job_templates.py  jobs.py  labels.py  notifications.py  organizations.py  projects.py  rbac.py  schedules.py  system.py  teams.py  users.py  workflow_jobs.py  workflow_templates.py
scripts/: check_doc_parity.py  mcp_smoke_test.py
tests/: test_access_log.py  test_activity_stream_and_instances.py  test_auth_passthrough.py  test_client_request.py  test_client_token_cache.py  test_envelope_contract.py  test_integration_passthrough.py  test_pagination_meta.py  test_proxy.py  test_security_regressions.py  test_server.py  test_session_reuse.py  test_ssl_config.py  test_tls_server.py  test_tools_core.py  test_tools_inventory.py  test_tools_rbac_org.py  test_usage.py
